[AAOS emulator] Disable Ethernet by default
VirtioWifi exposes network interface as eth0 in Android
guest system and will therefore turn on Ethernet for AAOS
once the usb_host hardware feature is turned on. By design,
Wi-Fi will not be kept as the default network if Ethernet
is present. To workaround the issue, set ethernet_iface_regex
to a value that will never be matched and therefore Ethernet
won't be running.

Bug: 192710732
Signed-off-by: Weilun Du <wdu@google.com>
Change-Id: I34f5ba2160af996801b48e8bf3d658bf00c9c652

--- a/common/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/common/overlay/frameworks/base/core/res/res/values/config.xml
@@ -25,4 +25,9 @@
     <!-- AAOS doesn't support fingerprint and face -->
     <string-array name="config_biometric_sensors" translatable="false" >
     </string-array>
+    <!-- Regex of wired ethernet ifaces -->
+    <!-- To avoid having Ethernet running and taking over Wi-Fi as the default network,
+         force the builtin EthernetTracker to use a pattern that will never match anything.
+    -->
+    <string translatable="false" name="config_ethernet_iface_regex">do_not_match</string>
 </resources>
