[AAOS Emulator] Restricting ethernet network by default
Configure virtual devices to prioritize Wi-Fi over Ethernet.
Reference CL:
https://android-review.googlesource.com/c/device/google/cuttlefish/+/1496543/

Bug: 192710732

Signed-off-by: Weilun Du <wdu@google.com>
Change-Id: I82eacd3ed590cb49ab7babd313f9327a32dfc08f

--- a/common/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/common/overlay/frameworks/base/core/res/res/values/config.xml
@@ -25,4 +25,7 @@
     <!-- AAOS doesn't support fingerprint and face -->
     <string-array name="config_biometric_sensors" translatable="false" >
     </string-array>
+    <string-array translatable="false" name="config_ethernet_interfaces">
+        <item>eth0;11,12,14;;</item>
+    </string-array>
 </resources>
