--- a/emulator/cluster/rro_overlays/CarServiceOverlay/res/values/config.xml
+++ b/emulator/cluster/rro_overlays/CarServiceOverlay/res/values/config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
-** Copyright 2021, The Android Open Source Project
+** Copyright 2020, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -39,7 +39,7 @@
     -->
     <string-array translatable="false" name="config_occupant_display_mapping">
       <item>displayPort=0,displayType=MAIN,occupantZoneId=0</item>
-      <item>displayUniqueId=virtual:com.android.car.cluster.osdouble:ClusterDisplay,displayType=INSTRUMENT_CLUSTER,occupantZoneId=0</item>
+      <item>displayPort=1,displayType=INSTRUMENT_CLUSTER,occupantZoneId=0</item>
     </string-array>
 
     <!--
@@ -56,15 +56,21 @@
 
         The default list defined below will enable all optional features defined.
     -->
-    <!-- Override cluster_service with cluster_home_service. -->
     <!-- TODO(b/205908527): this overlay is to temporarily disable CarEvsService by default. -->
     <string-array translatable="false" name="config_allowed_optional_car_features">
         <item>car_navigation_service</item>
-        <item>cluster_home_service</item>
+        <item>cluster_service</item>
         <item>com.android.car.user.CarUserNoticeService</item>
         <item>diagnostic</item>
         <item>storage_monitoring</item>
         <item>vehicle_map_service</item>
         <item>car_telemetry_service</item>
     </string-array>
+
+    <bool name="audioUseDynamicRouting">true</bool>
+    <!--  Configuration to enable muting of individual volume groups. If this is set to
+          false, muting of individual volume groups is disabled, instead muting will toggle master
+          mute. If this is set to true, car volume group muting is enabled and each individual
+          volume group can be muted separately. -->
+    <bool name="audioUseCarVolumeGroupMuting">true</bool>
 </resources>
