--- a/common/overlay_packages/ConnectivityOverlay/res/values/config.xml
+++ b/common/overlay_packages/ConnectivityOverlay/res/values/config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
-** Copyright 2020, The Android Open Source Project
+** Copyright 2022, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -18,11 +18,7 @@
 -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- List of biometric sensors on the device, in decreasing strength. Consumed by AuthService
-     when registering authenticators with BiometricService. Format must be ID:Modality:Strength,
-     where: IDs are unique per device, Modality as defined in BiometricAuthenticator.java,
-     and Strength as defined in Authenticators.java -->
-    <!-- AAOS doesn't support fingerprint and face -->
-    <string-array name="config_biometric_sensors" translatable="false" >
+    <string-array translatable="false" name="config_ethernet_interfaces">
+        <item>eth0;11,12,14;;</item>
     </string-array>
 </resources>
