Add boilerplate for Railway reference app.
Bug: 225226520
Test: build
Change-Id: I1f8e474b4d9c2ccd29acfdce256b90d0d07a026d

--- a/common/overlay/frameworks/base/core/res/res/values/vendor_required_apps_managed_user.xml
+++ b/common/overlay/frameworks/base/core/res/res/values/vendor_required_apps_managed_user.xml
@@ -30,6 +30,7 @@
         <item>com.google.android.car.kitchensink</item>
         <item>com.google.android.car.netdbug</item>
         <item>com.google.android.car.networking.preferenceupdater</item>
+	<item>com.google.android.car.networking.railway</item>
         <item>com.google.android.car.setupwizard</item>
         <item>com.google.android.car.uxr.oas</item>
         <item>com.google.android.car.uxr.sample</item>
