Make the cluster display private.
Bug: 237787920
Test: atest android.car.cts.CarOccupantZoneManagerTest
Change-Id: Ibaf12c0c828eebe3c53da6ab552ae3a62c3bcb5c
(cherry picked from commit e005f31dfb360cda3739cabeab59d95f45cb626f)
Merged-In: Ibaf12c0c828eebe3c53da6ab552ae3a62c3bcb5c

--- a/common/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/common/overlay/frameworks/base/core/res/res/values/config.xml
@@ -32,4 +32,11 @@
     <!-- Device does not support near ultrasound audio-->
     <bool name="config_supportMicNearUltrasound">false</bool>
     <bool name="config_supportSpeakerNearUltrasound">false</bool>
+
+    <!-- Controls if local secondary displays should be private or not. Value specified in the array
+         represents physical port address of each display and display in this list will be marked
+         as private. {@see android.view.Display#FLAG_PRIVATE} -->
+    <integer-array translatable="false" name="config_localPrivateDisplayPorts">
+        <item>1</item> <!-- ClusterDisplay -->
+    </integer-array>
 </resources>
