Enable Extended View System service on the emulator
Bug: 249561857
Test: Manually confirm EVS applications on gcar_emu targets
Change-Id: Id378e1b27cc5284bbb51c4adca7c1a4602fb8df1

--- a/emulator/cluster/rro_overlays/CarServiceOverlay/res/values/config.xml
+++ b/emulator/cluster/rro_overlays/CarServiceOverlay/res/values/config.xml
@@ -56,8 +56,8 @@
 
         The default list defined below will enable all optional features defined.
     -->
-    <!-- TODO(b/205908527): this overlay is to temporarily disable CarEvsService by default. -->
     <string-array translatable="false" name="config_allowed_optional_car_features">
+        <item>car_evs_service</item>
         <item>car_navigation_service</item>
         <item>cluster_service</item>
         <item>com.android.car.user.CarUserNoticeService</item>
