Add UxR config resource overlay in gcar_md emulator
This new config sets baseline UxR for all passenger displays associated
with physical ports.

Bug: 245594473
Test: On gcar_md emulator, observe UxR on passenger displays in
UxRestrictionsSample app under various driving state and speed.

Change-Id: If3d448529c12e406a26792bf7c19cd1654fa6e33

--- a/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/xml/overlays.xml
+++ b/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/xml/overlays.xml
@@ -18,4 +18,5 @@
     <item target="array/config_occupant_zones" value="@array/config_occupant_zones" />
     <item target="array/config_occupant_display_mapping" value="@array/config_occupant_display_mapping" />
     <item target="bool/enableProfileUserAssignmentForMultiDisplay" value="@bool/enableProfileUserAssignmentForMultiDisplay" />
+    <item target="xml/car_ux_restrictions_map" value="@xml/car_ux_restrictions_map" />
 </overlay>
