--- a/emulator/multi-display/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/emulator/multi-display/overlay/frameworks/base/core/res/res/values/config.xml
@@ -56,9 +56,9 @@
         support PROFILE user. -->
     <integer name="config_userTypePackageWhitelistMode">2</integer>
 
-    <!-- Whether the device allows users to start in background on secondary displays.
+    <!-- Whether the device allows users to start in background visible on displays.
          Should be false for most devices, except automotive vehicle with passenger displays. -->
-    <bool name="config_multiuserUsersOnSecondaryDisplays">true</bool>
+    <bool name="config_multiuserVisibleBackgroundUsers">true</bool>
 
     <!-- Enable multi-user IME sessions -->
     <string translatable="false" name="config_deviceSpecificInputMethodManagerService">com.android.server.inputmethod.InputMethodManagerServiceProxy$Lifecycle</string>
