--- a/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/values/config.xml
+++ b/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/values/config.xml
@@ -72,6 +72,33 @@
       <item>displayPort=4,displayType=MAIN,occupantZoneId=3,inputTypes=TOUCH_SCREEN</item>
     </string-array>
 
+    <!--
+    Specifies optional features that can be enabled by this image. Note that vhal can disable
+    them depending on product variation.
+    Feature name can be either service name defined in Car.*_SERVICE for Car*Manager or any
+    optional feature defined under @OptionalFeature annotation.
+    Note that '/' is used to have subfeature under main feature like "MAIN_FEATURE/SUB_FEATURE".
+
+    Some examples are:
+    <item>storage_monitoring</item>
+    <item>com.android.car.user.CarUserNoticeService</item>
+    <item>com.example.Feature/SubFeature</item>
+
+    The default list defined below will enable all optional features defined.
+    -->
+    <string-array translatable="false" name="config_allowed_optional_car_features">
+        <item>car_evs_service</item>
+        <item>car_navigation_service</item>
+        <item>car_occupant_connection_service</item>
+        <item>car_remote_device_service</item>
+        <item>cluster_home_service</item>
+        <item>com.android.car.user.CarUserNoticeService</item>
+        <item>diagnostic</item>
+        <item>storage_monitoring</item>
+        <item>vehicle_map_service</item>
+        <item>car_telemetry_service</item>
+    </string-array>
+
     <!-- Enable profile user assignment per each CarOccupantZone for per display android user
          assignments. This feature is still experimental. -->
     <bool name="enableProfileUserAssignmentForMultiDisplay" translatable="false">true</bool>
