Add audioUseDynamicRouting and audioUseCarVolumeGroupMuting overrides
Dynamic MD overlay was missing these overrides.

Bug: 261679385
Test: m -j && emulator -no-snapshot
Test: reproduce, then test if this change fixed the issue
Change-Id: I90f2f81ed213b54a73d27c976cbd7725e72b4d9b

--- a/emulator/multi-display-dynamic/CarServiceMultiDisplayOverlayEmulator/res/values/config.xml
+++ b/emulator/multi-display-dynamic/CarServiceMultiDisplayOverlayEmulator/res/values/config.xml
@@ -54,4 +54,7 @@
         <item>vehicle_map_service</item>
         <item>car_telemetry_service</item>
     </string-array>
+
+    <bool name="audioUseDynamicRouting">true</bool>
+    <bool name="audioUseCarVolumeGroupMuting">true</bool>
 </resources>
