Add UxR config resource overlay in gcar emulator
This new config sets baseline UxR for all dynamically added virtual
displays.

Bug: 241589812
Test: On gcar emulator, boot the system and observe UxR config in UxR
sample app.

Change-Id: I10905bda6d561d5571d59d28f476ccc7d2915659

--- a/emulator/multi-display-dynamic/CarServiceMultiDisplayOverlayEmulator/res/xml/overlays.xml
+++ b/emulator/multi-display-dynamic/CarServiceMultiDisplayOverlayEmulator/res/xml/overlays.xml
@@ -21,4 +21,5 @@
     <item target="array/config_allowed_optional_car_features" value="@array/config_allowed_optional_car_features" />
     <item target="bool/audioUseDynamicRouting" value="@bool/audioUseDynamicRouting" />
     <item target="bool/audioUseCarVolumeGroupMuting" value="@bool/audioUseCarVolumeGroupMuting" />
+    <item target="xml/car_ux_restrictions_map" value="@xml/car_ux_restrictions_map" />
 </overlay>
