Remove UxR restrictions on the 1st passenger in gcar_md emulator
This will unblock QA testing for apps behaviors under UxR

Bug: 241589812
Bug: 266120098
Bug: 266137083
Test: manual
Change-Id: I15fa9650fd1212b241766b3a4526a9896e08edde

--- a/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/xml/car_ux_restrictions_map.xml
+++ b/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/xml/car_ux_restrictions_map.xml
@@ -43,7 +43,7 @@
         </DrivingState>
 
         <DrivingState state="moving">
-            <Restrictions requiresDistractionOptimization="true" uxr="no_dialpad|no_filtering|limit_string_length|no_keyboard|no_video|limit_content|no_setup|no_text_message"/>
+            <Restrictions requiresDistractionOptimization="false" uxr="baseline"/>
         </DrivingState>
 
     </RestrictionMapping>
