--- a/emulator/cluster/rro_overlays/CarServiceOverlay_MdNd/res/xml/overlays.xml
+++ b/emulator/cluster/rro_overlays/CarServiceOverlay_MdNd/res/xml/overlays.xml
@@ -19,5 +19,6 @@
     <item target="array/config_occupant_display_mapping" value="@array/config_occupant_display_mapping" />
     <item target="array/config_allowed_optional_car_features" value="@array/config_allowed_optional_car_features" />
     <item target="bool/enableProfileUserAssignmentForMultiDisplay" value="@bool/enableProfileUserAssignmentForMultiDisplay" />
+    <item target="array/config_earlyStartupServices" value="@array/config_earlyStartupServices" />
     <item target="xml/car_ux_restrictions_map" value="@xml/car_ux_restrictions_map" />
 </overlay>
