Adjust the display size per UX
- Set all dpis to 160.
- Driver display for gcar_emu_x86_64 and Passenger displays for gcar_md_emu:
  1408x792 (16:9)
- Driver display for gcar_md_emu: 1848x792 (21:9)
- Increase the memory of gcar_emu_x86_64 to 4GB.
- Sync to vendor/auto/embedded: common/car_md.mk, car_audio_configuration.xml,
  overlay/frameworks/base/core/res/res/values/config.xml.

Bug: 275075670
Test: manually
Change-Id: I7ad2caed67686c5dc75c5bc016ff5ff6ad09c276

--- a/emulator/multi-display/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/emulator/multi-display/overlay/frameworks/base/core/res/res/values/config.xml
@@ -23,7 +23,7 @@
     <bool name="config_perDisplayFocusEnabled">true</bool>
 
     <!--  Maximum number of supported users -->
-    <integer name="config_multiuserMaximumUsers">5</integer>
+    <integer name="config_multiuserMaximumUsers">10</integer>
 
     <!-- Maximum number of users we allow to be running at a time -->
     <integer name="config_multiuserMaxRunningUsers">5</integer>
@@ -62,5 +62,7 @@
 
     <!-- Enable multi-user IME sessions -->
     <string translatable="false" name="config_deviceSpecificInputMethodManagerService">com.android.server.inputmethod.InputMethodManagerServiceProxy$Lifecycle</string>
+    <!-- Disable hidding the NavBars (CarSystemBars), as a workaround for b/259604616 -->
+    <bool name="config_hideNavBarForKeyboard">false</bool>
 
 </resources>
