Adding a flag to disable dreams for auto
Test: atest DreamManagerServiceTests
Fixes: b/290163250
Change-Id: Ic631ca2b87d6a6ff3f3d4f2098e78491298fd64f
Merged-In: Ic631ca2b87d6a6ff3f3d4f2098e78491298fd64f

--- a/common/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/common/overlay/frameworks/base/core/res/res/values/config.xml
@@ -29,6 +29,8 @@
     <integer-array name="config_availableColorModes">
         <item>0</item> <!-- COLOR_MODE_NATURAL -->
     </integer-array>
+    <!-- The dreams feature (screensavers) is not supported in android auto -->
+    <bool name="config_dreamsSupported">false</bool>
     <!-- Device does not support near ultrasound audio-->
     <bool name="config_supportMicNearUltrasound">false</bool>
     <bool name="config_supportSpeakerNearUltrasound">false</bool>
