--- a/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/xml/car_ux_restrictions_map.xml
+++ b/emulator/cluster/rro_overlays/CarServiceOverlay_MdOsDouble/res/xml/car_ux_restrictions_map.xml
@@ -17,7 +17,7 @@
         </DrivingState>
 
         <DrivingState state="idling">
-            <Restrictions requiresDistractionOptimization="false" uxr="baseline" mode="baseline"/>
+            <Restrictions requiresDistractionOptimization="true" uxr="no_video"/>
         </DrivingState>
 
         <!-- This is restrictions for moving and speed [0,5m/s) -->
