Add round skin and overlay and top bar padding for ultrawide
Bug: 308472512
Test: manual
Change-Id: Iaa573c9e1bc64d58c2b193e9d75b5be222e8eee0

--- a/emulator/skins/overlays/automotive_ultrawide/SystemUIOverlay/res/xml/car_sysui_overlays.xml
+++ b/emulator/skins/overlays/automotive_ultrawide/SystemUIOverlay/res/xml/car_sysui_overlays.xml
@@ -64,4 +64,7 @@
     <item
         target="integer/config_showDisplayCompatToolbarOnSystemBar"
         value="@integer/config_showDisplayCompatToolbarOnSystemBar" />
+    <item
+        target="dimen/car_top_system_bar_right_padding"
+        value="@dimen/car_top_system_bar_right_padding"/>
 </overlay>
