--- a/emulator/multi-display-dynamic/CarServiceMultiDisplayOverlayEmulator/res/values/config.xml
+++ b/emulator/multi-display-dynamic/CarServiceMultiDisplayOverlayEmulator/res/values/config.xml
@@ -53,6 +53,7 @@
         <item>storage_monitoring</item>
         <item>vehicle_map_service</item>
         <item>car_telemetry_service</item>
+        <item>car_display_compat_service</item>
     </string-array>
 
     <bool name="audioUseDynamicRouting">true</bool>
